--- a/style.css
+++ b/style.css
@@ -4,28 +4,112 @@ body {
     margin: 0;
 }
 
-:root {
-    color-scheme: dark;
+@media (prefers-color-scheme: dark) {
+    :root {
+        color-scheme: dark;
+    }
+
+    *::selection {
+        background-color: #ffffff;
+        color: #000000;
+    }
+
+    #score {
+        display: block;
+        background-color: #242424;
+        border: 1px solid #ffffff77;
+        border-radius: 8px;
+        width: max-content;
+        padding: 5px 10px;
+        margin-inline: auto;
+        font-size: 2em;
+    }
+
+    button {
+        background-color: #1ba71b;
+        padding: 5px 10px;
+        border: 1px solid #ffffff77;
+        border-radius: 5px;
+        transition: 0.3s;
+    }
+
+    button:hover {
+        background-color: #2dd22d;
+        border-color: #ffffff99;
+        cursor: pointer;
+    }
+
+    button:active {
+        background-color: #44ff44;
+        border-color: #ffffffdd;
+    }
+
+    #container {
+        display: none;
+        background-color: #242424;
+        padding: 10px 15px;
+        border: 1px solid #ffffff77;
+        border-radius: 10px;
+        margin-inline: auto;
+        width: 15%;
+        transition: 0.3s;
+    }
 }
 
-*::selection {
-    background-color: #ffffff;
-    color: #000000;
+@media (prefers-color-scheme: light) {
+    :root {
+        color-scheme: light;
+    }
+
+    *::selection {
+        background-color: #000000;
+        color: #ffffff;
+    }
+
+    #score {
+        display: block;
+        background-color: #ffffff77;
+        border: 1px solid #242424;
+        border-radius: 8px;
+        width: max-content;
+        padding: 5px 10px;
+        margin-inline: auto;
+        font-size: 2em;
+    }
+
+    button {
+        background-color: #44ff44;
+        padding: 5px 10px;
+        border: 1px solid #ffffff77;
+        border-radius: 5px;
+        transition: 0.3s;
+    }
+
+    button:hover {
+        background-color: #36ea36;
+        border-color: #ffffff99;
+        cursor: pointer;
+    }
+
+    button:active {
+        background-color: #27f427;
+        border-color: #ffffffdd;
+    }
+
+    #container {
+        display: none;
+        background-color: #ffffff77;
+        padding: 10px 15px;
+        border: 1px solid #242424;
+        border-radius: 10px;
+        margin-inline: auto;
+        width: 15%;
+        transition: 0.3s;
+    }
 }
 
 h1 {
     text-align: center;
-}
-
-#score {
-    display: block;
-    background-color: #242424;
-    border: 1px solid #ffffff77;
-    border-radius: 8px;
-    width: max-content;
-    padding: 5px 10px;
-    margin-inline: auto;
-    font-size: 2em;
 }
 
 #playerScore {
@@ -43,39 +127,9 @@ h1 {
     margin-inline: auto;
 }
 
-button {
-    background-color: #1ba71b;
-    padding: 5px 10px;
-    border: 1px solid #ffffff77;
-    border-radius: 5px;
-    transition: 0.3s;
-}
-
-button:hover {
-    background-color: #2dd22d;
-    border-color: #ffffff99;
-    cursor: pointer;
-}
-
-button:active {
-    background-color: #44ff44;
-    border-color: #ffffffdd;
-}
-
 #youOption {
     padding: 5px 10px;
     text-align: center;
-    transition: 0.3s;
-}
-
-#container {
-    display: none;
-    background-color: #242424;
-    padding: 10px 15px;
-    border: 1px solid #ffffff77;
-    border-radius: 10px;
-    margin-inline: auto;
-    width: 15%;
     transition: 0.3s;
 }
 
